--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "qrcode-generator": "^1.4.4",
     "truffle-contract": "^4.0.31",
     "vue": "2.6.10",
+    "vue-qr": "^4.0.9",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
     "web3": "^1.8.1"
